# rpi-ltm-y2k19jf-03

./: .gitignore  Makefile  Makefile.in  README.md  config.h.in  configure  configure.ac
etc/: ltmy2kd.init.in
include/: gpio.h  ltmy2k19jf03.h  sysfs_gpio.h
src/: ltmy2k19jf03.c  ltmy2kd.c  sysfs_gpio.c  test_multiseg.c  wiringpi_gpio.c
